Fixed home animation and, media button always visible

--- a/web/src/components/AudioPlayer/AudioPlayer.module.css
+++ b/web/src/components/AudioPlayer/AudioPlayer.module.css
@@ -27,13 +27,17 @@
 }
 
 .audio-pause-button {
-    width: 25px;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     cursor: pointer;
 }
 
 .audio-toggle-pause-button {
-    width: 25px;
+    width: 20px;
+    height: 20px;
+    min-width: 20px;
+    min-height: 20px;
     cursor: pointer;
 }
 
