--- a/web/src/components/Navbar/Navbar.module.css
+++ b/web/src/components/Navbar/Navbar.module.css
@@ -17,8 +17,6 @@
     justify-content: space-between;
     padding: 0 90px;
     position: relative;
-    backdrop-filter: blur(20px);
-    background: rgba(255, 255, 255, 0.1);
 }
 
 @media (max-width: 1195px) {
